@startuml
package AgregadoJugador{
    class Jugador <<Raiz Agregada>>{
        -ID_JUGADOR: int
        -nombre: String
        -direccionJuego: DireccionJuego
        --Metodos--
        +Jugador(...)
        +gettersYSetters()
        +cambiarDireccion(new DireccionJuego)

    }

    class DirectorDeJuego extends Jugador{
        -listaAventuras: List<int>
        -aventuraSelecionada: int
        --Metodos--
         +asignarAventura(idAventura: int): void
         +crearAventura(new Aventura())
    }

    class DireccionJuego<<Value Object>>{
        -ciudad: String
        -calle: String
        -piso: String

        +DireccionJuego()
        +getters()
    }

    Jugador "1" *-- "1" DireccionJuego

}


package AgregadoPersonaje{
    enum Raza <<Value Object>>{
        HUMANO
        ORCO
        ELFO
        ENANO
    }

    class Personaje<<Raiz Agregada>>{
        -ID_JUGADOR: int
        -ID_PERSONAJE: int
        -nombrePersonaje: String
        -Inventario: List<ObjetoInventario>
        -capacidadCarga: double
        -descripcion: String
        -historia: String
        -clase: Clase
        -raza: Raza
        --Metodos--
        +revisarInventario(): void
        +tirarObjeto(nombreObjeto: String): void
        +ordenarInventario(Reci); Recibe un génerico
        }

    class ObjetoInventario<<Entidad Hija>>{
        -ID_OBJETO: int
        -nombre: String
        -descripcionObjeto: String
        -peso: double
    }

    Personaje "1" --> "0..*" ObjetoInventario
    Personaje "1" *-- "1" Raza
    Jugador "1" <.. "0..*" Personaje: Pertenecen a
}

package AgregadoGrupoJuego{
    class GrupoJuego <<Raíz de Agregado>> {
        -ID_GRUPO: int
        -ID_JUGADOR: int
        -nombreGrupo: String
        -listaMiembros: List<int> // IDs de Jugador
        --Metodos--
        +añadirJugador(idJugador: int): void
        +eliminarJugador(idJugador: int): void
        +sustituirJugador(idJugadorNuevo: int, idJugadorViejo: int): void
        +cambiarNombreGrupo(nuevoNombre: String): void
    }
}

' La relación es de referencia de IDs
GrupoJuego "1" ..> "0..*" Jugador : usa / referencia


package AgregadoAventura{
    enum Dificultad<<Value Object>>{
        FACIL
        NORMAL
        DIFICIL
    }
    class Aventura<<Raiz Agregada>>{
        -ID_AVENTURA: int
        -nombreAventura: String
        -duracionSesionesAprox: int
        -dificultad: Dificultad
        --Metodos--
        +Aventura(...)
    }

    class AventuraAccion extends Aventura{
        -cantidadEnemigos: int
        -cantidadUbicaciones: int
    }

    class AventuraMisterio extends Aventura{
            -enigmaPrincipal: String
    }

    DirectorDeJuego "1" ..> "0..*" Aventura: Dirige
    Aventura "1" *-- "1" Dificultad
}
@enduml